<resources>
    <string name="app_name">Exam</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="createUser">Создать аккаунт</string>
    <string name="repeatPassword">Повторите пароль</string>
    <string name="middleName">Отчество</string>
    <string name="FirstName">Имя</string>
    <string name="SecondName">Фамилия</string>
    <string name="createNewUserButton">Создать аккаунт</string>
    <string name="menuSettings">Выход</string>
    <string name="menuEdit">Редактор</string>
    <string name="menuMain">Мой курсы</string>
    <string name="menuStore">Магазин</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="createGroup">Создать группу</string>
    <string name="nameGroup">Название группы</string>

    <string name="viewCreateExam">Введите название теста</string>

    <string name="editExamName">Название теста</string>

    <string name="btnCreateExam">Создать тест</string>

    <string name="editExamDescription">Описание теста (необязательно)</string>

    <string name="textViewGroupName">Введите название курса</string>
    <string name="courseDescription">Описание курса (необязательно)</string>
    <string name="courseName">Название курса</string>
    <string name="editCourseClick">Редактировать</string>
    <string name="groupEditClick">Группы</string>
    <string name="removeEditRecycle">Удалить</string>
    <string name="nameCourse">Название курса</string>
</resources>